tests/sksl/errors/ArrayOfInvalidSize.glsl
### Compilation failed:

error: 1: array size must be positive
error: 2: array size must be positive
error: 3: array size must be positive
error: 4: expected 'int', but found 'float'
error: 5: array size is too large
error: 6: expected 'int', but found 'bool'
error: 7: expected 'int', but found 'bool'
error: 8: expected 'int', but found 'int2'
error: 9: missing index in '[]'
error: 10: array size must be positive
error: 11: array size must be positive
error: 12: array size must be positive
error: 13: array size must be an integer
error: 14: array size out of bounds
error: 15: array size must be an integer
error: 16: array size must be an integer
error: 17: array size must be an integer
error: 18: expected array dimension
18 errors
